remove js keyword from package.json

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "url": "node-express-ts"
   },
   "keywords": [
-    "node",
-    "js",
+    "node js",
     "express",
     "typescript",
     "mysql"
