--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ndoe js, express, and typescript biolerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:start": "npx nodemon ./index.ts"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,9 @@
     "mysql"
   ],
   "author": "Phillip Rekhotho",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^3.1.3",
+    "ts-node": "^10.9.2"
+  }
 }
