--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:start": "npx nodemon ./index.ts"
+    "dev:start": "npx nodemon ./src/index.ts",
+    "copy-views": "rm -r './dist/views' && cp -r './src/views' './dist/views'",
+    "copy-public": "rm -r './dist/public' && cp -r './src/public' './dist/public'",
+    "build": "tsc && npm run copy-public && npm run copy-views"
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,11 @@
   "author": "Phillip Rekhotho",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
