--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mysql": "^2.15.26",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1"
   }
 }
