--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "perthite-2": "^2.0.9"
   }
