--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/method-override": "^0.0.35",
     "@types/mysql": "^2.15.26",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
